--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "busnow",
+  "version": "1.0.0",
+  "description": "Una aplicación para rastrear autobuses en tiempo real",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
-  }
+  },
+  "author": "E1000",
+  "license": "MIT"
 }
